add margin and remove target in histogram chart

--- a/Breast_Cancer_Macine_Learning_Jonghun.ipynb
+++ b/Breast_Cancer_Macine_Learning_Jonghun.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5842bdba-9569-44df-8a8d-6f26baad55ca",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,8 @@
    ],
    "source": [
     "# Histogram to check feature distributions\n",
-    "df_scaled.hist(figsize=(12, 8), bins=30)\n",
+    "df_scaled.iloc[:, :-1].hist(figsize=(12, 12), bins=30)\n",
+    "plt.subplots_adjust(hspace=0.5, wspace=0.5)  # Increase the spacing between rows and columns\n",
     "plt.suptitle(\"Feature Distributions after Scaling\")\n",
     "plt.show()\n",
     "\n",
